--- a/styles/sliding-menu.css
+++ b/styles/sliding-menu.css
@@ -4,5 +4,10 @@
 
 .sliding-menu .selected-item {
   position: absolute;
-  left: 100px;
+  top: -0.4rem;
+  height: 40px;
+
+  z-index: -1;
+  transition: all 0.6s ease-out;
+  border-radius: 16%;
 }
