:apple: working on the project gallery (still not sure how the Hero page will look like.

--- a/styles/global.css
+++ b/styles/global.css
@@ -3,3 +3,11 @@ body {
   font-size: 1rem;
   direction: rtl;
 }
+
+.image-gallery img {
+  filter: blur(2px);
+}
+
+.image-gallery img:hover {
+  filter: blur(0px);
+}
