--- a/styles/global.css
+++ b/styles/global.css
@@ -3,11 +3,12 @@ body {
   font-size: 1rem;
   direction: rtl;
 }
+@media screen and (min-width: 800px) {
+  .image-gallery img {
+    filter: blur(2px);
+  }
 
-.image-gallery img {
-  filter: blur(2px);
-}
-
-.image-gallery img:hover {
-  filter: blur(0px);
+  .image-gallery img:hover {
+    filter: blur(0px);
+  }
 }
